fixed view of voting page. options not inline any more button under thank you fixed alignement

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -35,3 +35,8 @@ h1 {
     width: auto;
 }
 
+.vote_option {
+    text-align: right;
+    vertical-align: middle;
+}
+
